--- a/admin/index.html
+++ b/admin/index.html
@@ -18,6 +18,17 @@
             });
           }
         });
+
+        // 👇 Este bloque escucha recovery tokens
+        const params = new URLSearchParams(window.location.hash.substring(1));
+        if (params.has('recovery_token')) {
+          window.netlifyIdentity
+            .recover(params.get('recovery_token'))
+            .then(() => {
+              document.location.href = '/admin/';
+            });
+        }
+
         window.netlifyIdentity.init();
       }
     </script>
